# dinogame_sdl

./: CMakeLists.txt  README.md
src/: Cactus.cpp  Cactus.h  CactusFactory.cpp  CactusFactory.h  Dino.cpp  Dino.h  DummySprite.cpp  DummySprite.h  ScoreHandler.cpp  ScoreHandler.h  main.cpp
